--- a/sample/AtomicProperty_CausTheory.yml
+++ b/sample/AtomicProperty_CausTheory.yml
@@ -1,229 +1,228 @@
 workflow:
-- groupname:
-  workflow:
+  format: v2.1
+  block:
+  - blockname:
+    order: workflow
+    list:
     - group:
-      - funcname: chooseElement
-        functype: function
-        methodname: Element
-        methodtype: method
-    - group: 
-      - methodname: getnumberOfElectron
-        methodtype: function
-        funcname:  numberOfElectron
-        functype:  parts
+      - !!omap
+        - methodname: Element
+        - methodtype: method
+        - funcname: chooseElement
+        - functype: function
     - group:
-      - methodname: SchroedingerDiracEq
-        methodtype: method
-        funcname:  EigenWavefunction
-        functype:  parts
-      - methodname: SchroedingerDiracEq
-        methodtype: method
-        funcname:  ElectricConfiguration
-        functype:  parts
+      - !!omap
+        - methodname: getnumberOfElectron
+        - methodtype: function
+        - funcname: numberOfElectron
+        - functype: parts
     - group:
-      - methodname: constructGroundStateWavefunction
-        methodtype: function
-        funcname:  GroundStateWavefunction
-        functype:  parts
-
-- groupname: orbitalEnergy
-  workflow:
+      - !!omap
+        - methodname: SchroedingerDiracEq
+        - methodtype: method
+        - funcname: EigenWavefunction
+        - functype: parts
+      - !!omap
+        - methodname: SchroedingerDiracEq
+        - methodtype: method
+        - funcname: ElectricConfiguration
+        - functype: parts
     - group:
-      - funcname:  EigenWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: constructGroundStateWavefunction
+        - methodtype: function
+        - funcname: GroundStateWavefunction
+        - functype: parts
+  - blockname: orbitalEnergy
+    order: workflow
+    list:
     - group:
-      - methodname: evaluateSOrbitalEnergy
-        methodtype: function
-        funcname:  sOrbitalEnergy
-        functype:  parts
-      - methodname: evaluatepOrbitalEnergy
-        methodtype: function
-        funcname:  pOrbitalEnergy
-        functype:  parts
-      - methodname: evaluatedOrbitalEnergy
-        methodtype: function
-        funcname:  dOrbitalEnergy
-        functype:  parts
-      - methodname: evaluatefOrbitalEnergy
-        methodtype: function
-        funcname:  fOrbitalEnergy
-        functype:  parts
-
-- groupname: mass
-  workflow:
+      - !!omap
+        - funcname: EigenWavefunction
+        - functype: parts
     - group:
-      - funcname: chooseElement
-        functype: function
-        methodname: Element
-        methodtype: method
+      - !!omap
+        - methodname: evaluateSOrbitalEnergy
+        - methodtype: function
+        - funcname: sOrbitalEnergy
+        - functype: parts
+      - !!omap
+        - methodname: evaluatepOrbitalEnergy
+        - methodtype: function
+        - funcname: pOrbitalEnergy
+        - functype: parts
+      - !!omap
+        - methodname: evaluatedOrbitalEnergy
+        - methodtype: function
+        - funcname: dOrbitalEnergy
+        - functype: parts
+      - !!omap
+        - methodname: evaluatefOrbitalEnergy
+        - methodtype: function
+        - funcname: fOrbitalEnergy
+        - functype: parts
+  - blockname: mass
+    order: workflow
+    list:
     - group:
-      - funcname: isotopeMass
-        functype: parts
-        methodname: chooseIsotopeMass
-        methodtype: function
-      - funcname: averagedMass
-        functype: parts
-        methodname: averageMass
-        methodtype: function
-
-- groupname: totalenergy
-  workflow:
+      - !!omap
+        - methodname: Element
+        - methodtype: method
+        - funcname: chooseElement
+        - functype: function
     - group:
-      - funcname:  GroundStateWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: chooseIsotopeMass
+        - methodtype: function
+        - funcname: isotopeMass
+        - functype: parts
+      - !!omap
+        - methodname: averageMass
+        - methodtype: function
+        - funcname: averagedMass
+        - functype: parts
+  - blockname: totalenergy
+    order: workflow
+    list:
     - group:
-      - methodname: evaluateTotalEnergy
-        methodtype: function
-        funcname: TotalEnergy
-        functype: parts
-      
-- groupname: angularMoment
-  workflow:
+      - !!omap
+        - funcname: GroundStateWavefunction
+        - functype: parts
     - group:
-      - methodname: constructGroundStateWavefunction
-        methodtype: function
-        funcname:  GroundStateWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: evaluateTotalEnergy
+        - methodtype: function
+        - funcname: TotalEnergy
+        - functype: parts
+  - blockname: angularMoment
+    order: workflow
+    list:
     - group:
-      - methodname: S3dAngularMoment
-        methodtype: method
-        funcname:  S3d
-        functype:  parts
-      - methodname: L3dAngularMoment
-        methodtype: method
-        funcname:  L3d
-        functype:  parts
-      - methodname: J3dAngularMoment
-        methodtype: method
-        funcname:  J3d
-        functype:  parts
-
-#- groupname:
-#  workflow:
-#    - group:
-#      - funcname:  S3d
-#        functype:  parts
-#    - group:
-#      - methodname: S3d
-#        methodtype: method
-#        funcname: 3dAngularMoment
-#        functype: parts
-#
-#- groupname:
-#  workflow:
-#    - group:
-#      - funcname:  L3d
-#        functype:  parts
-#    - group:
-#      - methodname: L3d
-#        methodtype: method
-#        funcname: 3dAngularMoment
-#        functype: parts
-#- groupname:
-#  workflow:
-#    - group:
-#      - funcname:  J3d
-#        functype:  parts
-#    - group:
-#      - methodname: J3d
-#        methodtype: method
-#        funcname: 3dAngularMoment
-#        functype: parts
-#
-
-- groupname: J4fangularMoment
-  workflow:
+      - !!omap
+        - methodname: constructGroundStateWavefunction
+        - methodtype: function
+        - funcname: GroundStateWavefunction
+        - functype: parts
     - group:
-      - methodname: constructGroundStateWavefunction
-        methodtype: function
-        funcname:  GroundStateWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: S3dAngularMoment
+        - methodtype: method
+        - funcname: S3d
+        - functype: parts
+      - !!omap
+        - methodname: L3dAngularMoment
+        - methodtype: method
+        - funcname: L3d
+        - functype: parts
+      - !!omap
+        - methodname: J3dAngularMoment
+        - methodtype: method
+        - funcname: J3d
+        - functype: parts
+  - blockname: J4fangularMoment
+    order: workflow
+    list:
     - group:
-      - methodname: J4fAngularMoment
-        methodtype: method
-        funcname:  J4f
-        functype:  parts
-
-- groupname: J4fangularMomentProjection
-  workflow:
+      - !!omap
+        - methodname: constructGroundStateWavefunction
+        - methodtype: function
+        - funcname: GroundStateWavefunction
+        - functype: parts
     - group:
-      - methodname: J4fAngularMoment
-        methodtype: method
-        funcname:  J4f
-        functype:  parts
-      - methodname: getgJ
-        methodtype: function
-        funcname:  gJ
-        functype:  parts
+      - !!omap
+        - methodname: J4fAngularMoment
+        - methodtype: method
+        - funcname: J4f
+        - functype: parts
+  - blockname: J4fangularMomentProjection
+    order: workflow
+    list:
     - group:
-      - methodname: (gJ-1)J4f
-        methodtype: parts
-        funcname:  J4fSpinDirectionProjection
-        functype:  parts
-      - methodname: (2-gJ)J4f
-        methodtype: parts
-        funcname:  J4fOrbitalDirectionProjection
-        functype:  parts
- 
-- groupname: r2
-  workflow:
+      - !!omap
+        - methodname: J4fAngularMoment
+        - methodtype: method
+        - funcname: J4f
+        - functype: parts
+      - !!omap
+        - methodname: getgJ
+        - methodtype: function
+        - funcname: gJ
+        - functype: parts
     - group:
-      - funcname:  GroundStateWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: (gJ-1)J4f
+        - methodtype: parts
+        - funcname: J4fSpinDirectionProjection
+        - functype: parts
+      - !!omap
+        - methodname: (2-gJ)J4f
+        - methodtype: parts
+        - funcname: J4fOrbitalDirectionProjection
+        - functype: parts
+  - blockname: r2
+    order: workflow
+    list:
     - group:
-      - methodname: r2Expectation
-        methodtype: method
-        funcname:  r2
-        functype:  parts
- 
-- groupname: r2_L
-  workflow:
+      - !!omap
+        - funcname: GroundStateWavefunction
+        - functype: parts
     - group:
-      - funcname:  EigenWavefunction
-        functype:  parts
+      - !!omap
+        - methodname: r2Expectation
+        - methodtype: method
+        - funcname: r2
+        - functype: parts
+  - blockname: r2_L
+    order: workflow
+    list:
     - group:
-      - methodname: sChanneldensityExpectation
-        methodtype: method
-        funcname:  r2_s
-        functype:  parts
-      - methodname: pChanneldensityExpectation
-        methodtype: method
-        funcname:  r2_p
-        functype:  parts
-      - methodname: dChanneldensityExpectation
-        methodtype: method
-        funcname:  r2_d
-        functype:  parts
-      - methodname: fChanneldensityExpectation
-        methodtype: method
-        funcname:  r2_f
-        functype:  parts
-
-
-- groupname: periodictable
-  workflow:
+      - !!omap
+        - funcname: EigenWavefunction
+        - functype: parts
     - group:
-      - methodtype: Element
-        methodtype: method
-        funcname: chooseElement
-        functype: function
-    - group: 
-      - methodname: getperiodictableRow
-        methodtype: function
-        funcname:  PeriodictableRow
-        functype:  parts
-- groupname: periodictable
-  workflow:
+      - !!omap
+        - methodname: sChanneldensityExpectation
+        - methodtype: method
+        - funcname: r2_s
+        - functype: parts
+      - !!omap
+        - methodname: pChanneldensityExpectation
+        - methodtype: method
+        - funcname: r2_p
+        - functype: parts
+      - !!omap
+        - methodname: dChanneldensityExpectation
+        - methodtype: method
+        - funcname: r2_d
+        - functype: parts
+      - !!omap
+        - methodname: fChanneldensityExpectation
+        - methodtype: method
+        - funcname: r2_f
+        - functype: parts
+  - blockname: periodictable
+    order: workflow
+    list:
     - group:
-      - methodtype: Element
-        methodtype: method
-        funcname: chooseElement
-        functype: function
-    - group: 
-      - methodname: getperiodictableColumn
-        methodtype: function
-        funcname:  PeriodictableColumn
-        functype:  parts
-
-
- 
+      - !!omap
+        - funcname: chooseElement
+        - functype: function
+    - group:
+      - !!omap
+        - methodname: getperiodictableRow
+        - methodtype: function
+        - funcname: PeriodictableRow
+        - functype: parts
+  - blockname: periodictable
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - funcname: chooseElement
+        - functype: function
+    - group:
+      - !!omap
+        - methodname: getperiodictableColumn
+        - methodtype: function
+        - funcname: PeriodictableColumn
+        - functype: parts
