--- a/sample/Group_FeatureSet.yml
+++ b/sample/Group_FeatureSet.yml
@@ -1,50 +1,52 @@
 workflow:
-- groupname: DomainKnowlege
-  workflow:
-  - group:
-    - funcname: FeatureGroups
-      functype: parts
-      methodname: DomainKnowledgeDivision
-- groupname: dendrogram
-  workflow:
-  - group:
-    - funcname: ClusteredSetCandates
-      functype: parts
-  - group:
-    - funcname: FeatureGroups
-      functype: parts
-      methodname: DomainKnowledgeDataScienceClusteringSelection
-- groupname: dendrogram
-  workflow:
-  - group:
-    - funcname: FeatureGroupsDistanceThresholdAll
-      functype: parts
-      methodname: chooseFeatureGroupsDistanceThresholdAll
-      methodtype: function
-    - funcname: FeatureDendrogram
-      functype: parts
-  - group:
-    - funcname: ClusteredSetCandates
-      functype: parts
-      methodname: DendrogramClusteringFeatureGroups
-- groupname: dendrogram
-  workflow:
-  - group:
-    - funcname: FeatureDistanceMatrix
-      functype: parts
-  - group:
-    - funcname: FeatureDendrogram
-      functype: parts
-      methodname: FeatureDistanceMatrixHierarchalClustering
-#- groupname: dendrogram
-#  workflow:
-#  - group:
-#    - funcname: AllData
-#      functype: parts
-#      methodname: genAllData
-#      methodtype: function
-#  - group:
-#    - funcname: FeatureDistanceMatrix
-#      functype: parts
-#      methodname: genFeatureDistanceMatrix
-#      methodtype: function
+  format: v2.1
+  block:
+  - blockname: DomainKnowlege
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: DomainKnowledgeDivision
+        - funcname: FeatureGroups
+        - functype: parts
+  - blockname: dendrogram
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - funcname: ClusteredSetCandates
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: DomainKnowledgeDataScienceClusteringSelection
+        - funcname: FeatureGroups
+        - functype: parts
+  - blockname: dendrogram
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: chooseFeatureGroupsDistanceThresholdAll
+        - methodtype: function
+        - funcname: FeatureGroupsDistanceThresholdAll
+        - functype: parts
+      - !!omap
+        - funcname: FeatureDendrogram
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: DendrogramClusteringFeatureGroups
+        - funcname: ClusteredSetCandates
+        - functype: parts
+  - blockname: dendrogram
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - funcname: FeatureDistanceMatrix
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: FeatureDistanceMatrixHierarchalClustering
+        - funcname: FeatureDendrogram
+        - functype: parts
