--- a/sample/Importance_MakeScores.yml
+++ b/sample/Importance_MakeScores.yml
@@ -1,47 +1,58 @@
 workflow:
-- groupname: all
-  workflow:
-  - group:
-    - funcname: AllModels
-      functype: parts
-      methodname: generateAllModels
-      methodtype: function
-  - group:
-    - funcname: BestScoreOfAll
-      functype: parts
-      methodname: generateBestOfAllModels
-      methodtype: function
-- groupname: deleteGroup
-  workflow:
-  - group:
-    - funcname: AllModels
-      functype: parts
-      methodname: generateAllModels
-      methodtype: function
-    - funcname: Group
-      functype: parts
-      methodname: GenerateGroup
-      methodtype: function
-  - group:
-    - funcname: AllModelsExceptGroup
-      functype: parts
-      methodname: DeleteGroupFromAllModels
-      methodtype: function
-- groupname: deleteGroupAddSubgroup
-  workflow:
-  - group:
-    - funcname: AllModelsExceptGroup
-      functype: parts
-      methodname: DeleteGroupFromAllModels
-      methodtype: function
-    - funcname: Subgroup
-      functype: parts
-      methodname: GenerateSubgroupFromGroup
-      methodtype: function
-  - group:
-    - funcname: AllModelsExceptGroupWithSubgroup
-      functype: parts
-      methodname: AddSubgroup
-      methodtype: function
-
-
+  format: v2.1
+  block:
+  - blockname: all
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: generateAllModels
+        - methodtype: function
+        - funcname: AllModels
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: generateBestOfAllModels
+        - methodtype: function
+        - funcname: BestScoreOfAll
+        - functype: parts
+  - blockname: deleteGroup
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: generateAllModels
+        - methodtype: function
+        - funcname: AllModels
+        - functype: parts
+      - !!omap
+        - methodname: GenerateGroup
+        - methodtype: function
+        - funcname: Group
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: DeleteGroupFromAllModels
+        - methodtype: function
+        - funcname: AllModelsExceptGroup
+        - functype: parts
+  - blockname: deleteGroupAddSubgroup
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: DeleteGroupFromAllModels
+        - methodtype: function
+        - funcname: AllModelsExceptGroup
+        - functype: parts
+      - !!omap
+        - methodname: GenerateSubgroupFromGroup
+        - methodtype: function
+        - funcname: Subgroup
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: AddSubgroup
+        - methodtype: function
+        - funcname: AllModelsExceptGroupWithSubgroup
+        - functype: parts
