--- a/sample/MaterialsList_SearchGoodMaterial.yml
+++ b/sample/MaterialsList_SearchGoodMaterial.yml
@@ -1,58 +1,71 @@
 workflow:
-- groupname:
-  workflow:
-  - group:
-     - funcname: raiseMaterialsList
-       functype: function
-     - funcname: searchMaterialsListHavingTargetVariable
-       functype: function
-  - group:
-     - methodname: selectNoExperiment
-       methodtype: function
-       funcname: NoExperimentMaterialsList
-       functype: parts
-  - group:
-     - methodname: MaterialSynthesis
-       methodtype: method
-       funcname: SynthesizedMaterils
-       functype: parts
-  - group:
-     - methodname: measureTargetQuanitty
-       methodtype: function
-       funcname: newTargetValues
-       functype: parts
-     - funcname: getTargetSelectionCriterion
-       functype: function
-  - group:
-     - methodname: SelectSynthesizedTaretMaterialsIteratively
-       methodtype: function
-       funcname: newTargetMaterial
-       functype: parts
-
-- groupname:
-  workflow:
-  - group:
-    - funcname: TargetCriterion
-      functype: parts
-  - group:
-    - methodname: TargetSelectionCriterion
-      methodtype: parts
-      funcname: getTargetSelectionCriterion
-      functype:  function
-
-
-- groupname:
-  workflow:
-  - group:
-    - funcname: chooseMaterialsDatabase
-      functype: function
-      methodname: MaterialsDatabase 
-      methodtype: method
-    - funcname: chooseTargetValues
-      functype: function
-  - group:
-    - methodname: storeInMaterialsDataBase
-      methodtype: function
-      funcname: RicherMaterialsDatabase
-      functype: parts
-
+  format: v2.1
+  block:
+  - blockname:
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - funcname: raiseMaterialsList
+        - functype: function
+      - !!omap
+        - funcname: searchMaterialsListHavingTargetVariable
+        - functype: function
+    - group:
+      - !!omap
+        - methodname: selectNoExperiment
+        - methodtype: function
+        - funcname: NoExperimentMaterialsList
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: MaterialSynthesis
+        - methodtype: method
+        - funcname: SynthesizedMaterils
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: measureTargetQuanitty
+        - methodtype: function
+        - funcname: newTargetValues
+        - functype: parts
+      - !!omap
+        - funcname: getTargetSelectionCriterion
+        - functype: function
+    - group:
+      - !!omap
+        - methodname: SelectSynthesizedTaretMaterialsIteratively
+        - methodtype: function
+        - funcname: newTargetMaterial
+        - functype: parts
+  - blockname:
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - funcname: TargetCriterion
+        - functype: parts
+    - group:
+      - !!omap
+        - methodname: TargetSelectionCriterion
+        - methodtype: parts
+        - funcname: getTargetSelectionCriterion
+        - functype: function
+  - blockname:
+    order: workflow
+    list:
+    - group:
+      - !!omap
+        - methodname: MaterialsDatabase
+        - methodtype: method
+        - funcname: chooseMaterialsDatabase
+        - functype: function
+      - !!omap
+        - funcname: chooseTargetValues
+        - functype: function
+    - group:
+      - !!omap
+        - methodname: storeInMaterialsDataBase
+        - methodtype: function
+        - funcname: RicherMaterialsDatabase
+        - functype: parts
